syntax-spec.txt
This is the Thrax syntax specification. This document is a work in progress.

================================================================================
LEXICAL STRUCTURE
================================================================================

Definition alphabet:
	The alphabet consists of all ASCII characters except control characters.

Definition atom:
	An atom is one of:
		- An integer literal like 1, 2, etc., or in hex notation 0x1, 0x2, etc.
		- A floating point number like 1.2, 0.1, etc., or in scientific notation
		  12e+12, 12e-3, etc.
		- A string literal like "Hello world\n". Supported escape sequences:
		  \n, \t, \\, \".
		- A token group
.

Definition variable:
	A variable is an identifier starting with a lowercase letter, followed by
	zero or more alphanumeric characters or underscores. Variables name terms.

Definition type name:
	A type name is an identifier starting with an UPPERCASE letter. Type names
	name types (e.g. Int, Str). The case of the first letter is what
	distinguishes a type name from a variable.

Definition type variable:
	A type variable is a backtick followed by a type name, e.g. `T, `Elem. It
	stands for "some type". All type variables free in a signature are
	implicitly universally quantified at the front of that signature.

Definition delimiter token:
	The following are delimiter tokens:
		- `+`  `-`  `*`  `/`  `%`     (arithmetic)
		- `!`                         (logical not, unary)
		- `?=`                        (equality test)
		- `$`                         (global marker)
		- `:`                         (has-type)
		- `->`                        (function type arrow)
		- `=`                         (binding)
		- `(`  `)`  `\`               (group / lambda)
.

================================================================================
TERMS (expr)
================================================================================

Definition expr:
	- An atom is an expression.
	- A variable is an expression.
	- For expressions e_1 .. e_n and a binary operator `op`:
		e_1 `op` e_2 `op` ... `op` e_n  is an expression.
	- For an expression e and a unary operator `op`: `op` e is an expression.
	- Application is juxtaposition: `f x` applies f to x (left-associative,
	  binds tighter than any operator).
	- `\` pat+ `=` e           is a lambda (anonymous function). Multiple
	  parameters are curried sugar: `\x y z = e` means `\x = \y = \z = e`. A
	  parameter may be an irrefutable pattern (see PATTERNS), e.g.
	  `\Person.{ name, _ } = name`.
	- `if` e_1 `then` e_2 `else` e_3   is a conditional. The condition e_1 is an
	  Int; it takes the then-branch when nonzero. (There is no Bool type yet.)
	- `if` e `is` pat `then` e ... `else` e   is a match (note the `is`). See
	  PATTERNS.
	- `let` pat [ `:` type ] `=` e_1 `in` e_2     is a local binding; `pat` is a
	  variable or an irrefutable pattern (see PATTERNS). A let binding is
	  polymorphic (let-generalization). It is recursive exactly when its variable
	  occurs free in e_1 -- there is no `let rec` keyword; recursion is detected,
	  not declared. A variable binder may carry a type annotation, `let f : T =
	  ...`, which pins the bound value's type (and gives a recursive binding its
	  declared type up front).

The `-` token is special: binary subtraction between two expressions, unary
negation when it prefixes one.

================================================================================
TYPES
================================================================================

Definition type:
	type ::= app '->' type         # '->' is right-associative
	       | app
	app  ::= TypeName atom*        # type application (Maybe Int); juxtaposition
	       | atom
	atom ::= TypeName              # type constructor: Int, Str
	       | `TypeName             # type variable
	       | '(' type ')'

The base types are Int and Str. At runtime every value is an ssize_t (Str is a
pointer stored in an ssize_t); the type checker keeps Int and Str distinct, the
runtime does not. A struct type name (see STRUCTS) -- or a union (sum) type name
-- is also a type constructor.

A generic type is APPLIED to type arguments by juxtaposition, like a function
call: `Maybe Int`, `Pair Int Str`. Application binds tighter than `->` and only
a TypeName may head it (there are no higher-kinded variables); an argument is a
bare atom, so a nested application is parenthesized: `List (Maybe Int)`. A
generic type must be given either all of its arguments or none -- when none are
written they are inferred (e.g. the element of a bare `Maybe` used in context) --
and any other count is an arity error.

================================================================================
GLOBAL DEFINITIONS
================================================================================

A global is introduced with the `$` marker (`$a` and `$ a` are equivalent):

	global ::= '$' var [ ':' type ] '=' expr

A type annotation is REQUIRED unless inference assigns the body a ground,
non-arrow type (i.e. it works out to Int or Str with no type variables left).
Equivalently: functions and anything polymorphic must be annotated; plain
constants need not be. (Option B / permissive: the inferred body may reference
other globals; only the result's shape matters.)

	$a = 1               # ok, inferred Int
	$a = "hi"            # ok, inferred Str
	$a = 1 + 1           # ok, inferred Int
	$a = id 5            # ok, inferred Int (id resolved from its signature)
	$id : `T -> `T = \x = x          # required: function / polymorphic
	$abs : Int -> Int = \n = if n ?= 0 then 0 else 0 - n

Unannotated globals are non-arrow, hence non-recursive, so they resolve as a
DAG; a cycle among unannotated globals is an error.

(FFI: `ext name : type = ("sym" "lib.so")` is reserved but not yet implemented.)

================================================================================
STRUCTS (product types)
================================================================================

A struct is a named record type. It is declared with the `Struct` annotation in
place of a type; the body is a comma-separated list of typed fields (a trailing
comma is allowed). The type name must start uppercase, field names lowercase:

	struct ::= '$' TypeName ':' 'Struct' '=' [ field (',' field)* ','? ]
	field  ::= var ':' type

	$ Person : Struct =
		name: Str,
		age: Int,

A struct value is built with a literal: the type name precedes `.{ ... }`, and
every declared field must be set exactly once (unknown, missing, or duplicate
fields are type errors). Each field is set with a leading-dot `.field = expr`, as
in C designated initializers. The type name may be OMITTED -- a bare `.{ ... }`
-- when it is determined by context (an annotation, or an enclosing field):

	lit ::= [ TypeName ] '.{' [ '.' var '=' expr (',' ...)* ','? ] '}'

	$ person : Person = Person.{ .name = "Will", .age = 21 }
	$ p2     : Person = .{ .name = "Q", .age = 3 }   # type inferred from `: Person`

A field is read with postfix `.`, which binds tighter than application and
chains left-to-right (`a.b.c`):

	access ::= expr '.' var

	$ who : Str = person.name
	$ yrs : Int = person.age

Structs are nominal: a struct name is an ordinary type constructor that unifies
by name.

A struct (like a union) may be GENERIC. There is no separate parameter list: any
type variable left free in a field type is an implicit parameter of the
declaration, quantified in order of first appearance -- the same rule that makes
a function signature polymorphic. The type is then applied to arguments at use
sites (see TYPES):

	$ Box : Struct = val: `T,          # Box is generic in `T
	$ Pair : Struct =                  # Pair is generic in `A then `B
		fst: `A,
		snd: `B,

	$ ibox : Box Int      = Box.{ .val = 7 }
	$ sbox : Box Str      = Box.{ .val = "hi" }   # a second instantiation
	$ pair : Pair Int Str = Pair.{ .fst = 1, .snd = "two" }

A literal instantiates the parameters fresh from its field values, and field
access reads a field at the receiver's instantiation, so `ibox.val` is an Int
and `sbox.val` a Str. Field types nest like any other: a field may be `Box `T` or
`List (Maybe `T)`.

A bare literal works for generic types too: `$ b : Box Int = .{ .val = 5 }`
resolves to `Box` (and pins its parameter to Int) from the annotation. The same
holds for a union constructor written without its type name -- `.Tag` or
`.Tag.{ ... }` -- so a bare literal is the general way to let context choose the
type. A bare literal whose type cannot be determined from context is an error.

Not yet supported: field access where the receiver's type is not statically known
(e.g. `\p = p.name`).

================================================================================
PATTERNS
================================================================================

A pattern destructures a value and binds its parts. Patterns appear in lambda
parameters and `let` bindings (and, later, `if .. is` match arms):

	pattern  ::= '_'                      # wildcard: matches anything, binds nothing
	           | var                      # binds the value to this name
	           | Int | Real | Str         # literal: matches by equality (refutable)
	           | TypeName '.{' fields '}'  # struct pattern (see below)
	fields   ::= positional | named
	positional ::= [ pattern (',' pattern)* ','? ]
	named    ::= [ fieldpat (',' fieldpat)* ','? ]
	fieldpat ::= '.' var '=' pattern      # bind this field to a sub-pattern
	           | '.' var                  # pun: `.name` means `.name = name`

A struct pattern `Type.{ ... }` matches a struct of `Type` and its fields. As in
a literal, named fields carry a leading-dot `.field`; a pattern is

	- POSITIONAL when fields are bare (no dot): one sub-pattern per field, in
	  declaration order; every field must be listed (use `_` to ignore one). E.g.
	  for `Person.{name, age}` the pattern `Person.{ who, _ }` binds `who` = name.
	- NAMED when fields are dotted: any order, omitted fields ignored. A lone
	  `.name` puns (binds the field to a variable of the same name), so a single
	  field is matched unambiguously as `Person.{ .name }`.

The two forms cannot be mixed in one struct pattern.

Lambda and `let` patterns must be IRREFUTABLE: only `_`, variables, and struct
patterns built from them. A literal sub-pattern is refutable and is rejected
there (it belongs in an `if .. is` match). Patterns nest:

	$ fst   : Person -> Str       = \Person.{ n, _ } = n
	$ age   : Int                 = let Person.{ .age = a } = person in a
	$ start : Line -> Int         = \Line.{ .from = Point.{ x, _ }, .to = _ } = x

Lowering: a pattern binding desugars to plain `let`s over field accesses, so it
is pure surface syntax -- `let Person.{ n, a } = p in e` becomes
`let s = p in let n = s.name in let a = s.age in e`.

A MATCH tries several patterns against one scrutinee:

	match ::= 'if' e ('is' pattern 'then' e)+ 'else' e

The `is` right after the scrutinee distinguishes a match from the boolean `if`.
Arms are tried top to bottom; the first whose pattern matches wins and binds its
variables in that arm's body. Here patterns MAY be refutable -- literal guards
and field-literal guards are allowed:

	$ classify : Int -> Str = \n =
		if n is 0 then "zero" is 1 then "one" else "many"
	$ greet : Person -> Str = \p =
		if p is Person.{ .age = 0 } then "newborn"
		       is Person.{ .name = who } then who
		       else "?"

A match on a union dispatches on the constructor: arms are variant patterns
`Type.Tag` / `Type.Tag.{ ... }`, with an optional trailing variable/`else` arm.
A variant arm may be written BARE -- `.Tag` / `.Tag.{ ... }`, dropping the type
name -- and the union is inferred from the arms: a qualified arm names it, or, if
every arm is bare, the unique declared union whose variants cover all the arms'
tags. If two unions fit, qualify one arm to disambiguate.

	$ len : List `T -> Int =
		let go : List `T -> Int -> Int = \l n =
			if l is .Nil then n
			     is .Cons.{ _, xs } then go xs (n + 1)
			     else n
		 in \l = go l 0

`else` is mandatory (there is no exhaustiveness checking yet). An irrefutable arm
always matches, making later arms dead.
A match lowers to a single binding of the scrutinee followed by a chain of
boolean `if`s: a literal pattern `is k` becomes the guard `scrut ?= k`, a struct
field literal `Type.{ .f = k }` becomes `scrut.f ?= k`, and the bound variables
become `let`s in the arm body. Current limits: matching Int and Real literals
only (no string equality yet), and no `_` catch-all sugar (use a variable arm or
`else`).

================================================================================
TYPE SYSTEM (Hindley-Milner, no type classes)
================================================================================

The checker (TC) runs between the parser (EX) and the interpreter (IT). It does
not touch the EX tree directly; it first desugars to a minimal typed Core:

	Core ::= Var name
	       | Lit (Int | Str)
	       | Lam param body
	       | App fn arg
	       | Let name val body

Everything else desugars to applications of primitives held in the initial type
environment:

	+ - * / %   : Int -> Int -> Int
	?=          : Int -> Int -> Int
	neg  (-)    : Int -> Int
	not  (!)    : Int -> Int
	if          : Int -> `T -> `T -> `T

	a + b            ==>  App (App (Var "+") a) b
	if c then t else e ==>  App (App (App (Var "if") c) t) e
	-x               ==>  App (Var "neg") x

Inference is Algorithm W over a union-find of unification variables:
	- unify: constructors by name, arrows structurally, occurs-check on bind.
	- generalize at every let (the language is pure, so no value restriction);
	  instantiate a scheme at every use.
	- a let `x = e1` whose `x` occurs free in `e1` is recursive: bind
	  `x : fresh` before inferring e1, then unify.
	- annotated globals: the signature's `T vars become rigid skolems while the
	  body is checked, so a `T -> `T body cannot assume `T = Int.

Checking proceeds in three phases:
	A. collect every global (name, optional signature, body).
	B. resolve each global's type: annotated -> its scheme; unannotated -> infer
	   on demand (DAG, cycle = error) and require a ground non-arrow result.
	C. check each body against its resolved/declared type.
