crates/frontend/src/parser.rs
//! A Pratt (precedence-climbing) parser.
//!
//! Structure mirrors the grammar so the Rust call stack matches it, which keeps
//! error context meaningful:
//!
//! * `Parser::parse_expr` is the precedence-climbing core: it parses a prefix,
//!   then folds infix operators and juxtaposition (application) by binding power
//!   from `table`.
//! * `Parser::parse_primary` parses one atom then a left-associative postfix
//!   `.` chain (field access, tuple index, struct/variant literals,
//!   module-qualified names) that binds tighter than application.
//! * The control forms (`let`, `if`, `when`, `\`, `with`, `do`, `defer`) are
//!   primaries, each with its own `parse_*` method.
//!
//! Nodes are built into the [`Ast`] stores as they are parsed (bottom-up), so a
//! parse method returns an [`Aol`] handle, not a reference. Names are interned to
//! [`StrId`]. Sugar (`;`, `|>`, `<|`, `::`, `[..]`) is preserved as explicit AST
//! nodes; a later pass desugars it.

pub mod data;
pub(crate) mod table;
#[cfg(test)]
mod tests;

use crate::lexer::data::{Kind, Token};
use crate::lexer::Lexer;
use utilities::{Aol, Line, Slice, Span, StrId};
use utilities::{Code, Diagnostic, Result};

use crate::parser::data::*;

pub struct Parser<'a> {
    lex: Lexer<'a>,
    ast: Ast,
    /// The (read-only) source, so a token's lexeme is `src[token.span]`. Tokens
    /// themselves carry only spans; this is where they resolve.
    src: &'a str,
    /// End offset of the most recently consumed token, so a node's span can run
    /// from its first token's start to here.
    last_end: usize,
}

/// Consume a token of an expected kind, or fail with an `UnexpectedToken`
/// diagnostic naming what was wanted. Evaluates to the consumed [`Token`].
macro_rules! expect {
    ($self:ident, $pat:pat, $what:expr) => {{
        let t = $self.peek()?;
        if !matches!(t.kind, $pat) {
            return Err($self.unexpected(&t, $what));
        }
        $self.bump()?
    }};
}

impl<'a> Parser<'a> {
    /// Build a parser that fills `ast`. Passing an existing [`Ast`] lets several
    /// modules of one compilation share stores, so a handle minted for one module
    /// resolves in every module (needed for cross-module type imports).
    pub fn new(lex: Lexer<'a>, ast: Ast) -> Parser<'a> {
        let src = lex.source();
        Parser {
            lex,
            ast,
            src,
            last_end: 0,
        }
    }

    /// Consume the parser, yielding the filled store bundle.
    pub fn into_ast(self) -> Ast {
        self.ast
    }

    // -- store + token helpers ----------------------------------------------

    fn expr(&mut self, e: Expr) -> Aol<Expr> {
        self.ast.exprs.create(e)
    }
    /// Record `node`'s source span as running from `start` to the end of the most
    /// recently consumed token, then return it (builder-style, for diagnostics).
    fn stamp(&mut self, start: usize, node: Aol<Expr>) -> Aol<Expr> {
        self.ast.expr_spans.insert(node, Span::new(start, self.last_end));
        node
    }
    /// Like [`stamp`](Self::stamp), for a `Ty` node.
    fn stamp_ty(&mut self, start: usize, node: Aol<Ty>) -> Aol<Ty> {
        self.ast.ty_spans.insert(node, Span::new(start, self.last_end));
        node
    }
    /// Like [`stamp`](Self::stamp), for a `Pattern` node.
    fn stamp_pat(&mut self, start: usize, node: Aol<Pattern>) -> Aol<Pattern> {
        self.ast.pat_spans.insert(node, Span::new(start, self.last_end));
        node
    }
    /// The start offset of the next token, marking where a node begins.
    fn here(&mut self) -> Result<usize> {
        Ok(self.peek()?.span.start)
    }
    fn ty(&mut self, t: Ty) -> Aol<Ty> {
        self.ast.tys.create(t)
    }
    fn pat(&mut self, p: Pattern) -> Aol<Pattern> {
        self.ast.pats.create(p)
    }
    /// A token's source lexeme, `src[t.span]`. The returned slice is tied to the
    /// source (`'a`), not to `&self`, so it can be handed straight to a `&mut
    /// self` method like [`intern`](Self::intern) without a borrow clash.
    fn text(&self, t: Token) -> &'a str {
        let src: &'a str = self.src;
        &src[t.span.start..t.span.end]
    }
    /// The identifier of an `@name` token, past the leading `@`.
    fn intrinsic_name(&self, t: Token) -> &'a str {
        debug_assert!(matches!(t.kind, Kind::At), "intrinsic_name on non-@ token");
        &self.text(t)[1..]
    }
    fn intern(&mut self, s: &str) -> StrId {
        self.ast.strings.intern(s)
    }
    /// Decode a `Kind::Str` token's literal (escapes and all) into interned
    /// bytes. Decoding is deferred to here so the lexer stays borrow-free. Used
    /// for non-interpolating strings (patterns, `@extern` operands).
    fn intern_str(&mut self, t: Token) -> Result<StrId> {
        let bytes = crate::lexer::decode_string(self.text(t), t.span.start, t.line)?;
        Ok(self.ast.strings.intern_bytes(&bytes))
    }
    /// A `Str` literal expression from raw decoded bytes.
    fn str_expr(&mut self, bytes: &[u8]) -> Aol<Expr> {
        let s = self.ast.strings.intern_bytes(bytes);
        self.expr(Expr::Str(s))
    }

    /// Build a string-literal expression, expanding `?(expr)` interpolations. `t`
    /// is the `Kind::Str` token. `"a ?(e) b"` desugars to `"a " ++ to_string e ++ " b"`;
    /// a literal chunk seeds the `++` chain so the whole expression types as `Str`,
    /// and each interpolant is stringified through `to_string` over its instance.
    /// Braces are ordinary literal characters; `\?` is a literal `?`.
    fn build_string(&mut self, t: Token) -> Result<Aol<Expr>> {
        let raw = self.text(t);
        let bytes = raw.as_bytes();
        let inner = &bytes[1..bytes.len() - 1];
        let body_start = t.span.start + 1; // absolute offset of `inner[0]`

        let mut segs: Vec<Aol<Expr>> = Vec::new();
        let mut chunk: Vec<u8> = Vec::new();
        let mut interpolated = false;
        let mut i = 0;
        while i < inner.len() {
            match inner[i] {
                b'\\' => i = crate::lexer::decode_escape(inner, i, body_start, t.line, &mut chunk)?,
                b'?' if i + 1 < inner.len() && inner[i + 1] == b'(' => {
                    interpolated = true;
                    let seg = self.str_expr(&chunk);
                    segs.push(seg);
                    chunk.clear();
                    // Balance the interpolant's `()` to find its close, skipping
                    // nested strings so their parens don't miscount.
                    let expr_start = i + 2; // past `?(`
                    let mut depth = 1usize;
                    let mut j = expr_start;
                    while j < inner.len() {
                        match inner[j] {
                            b'"' => {
                                j += 1;
                                while j < inner.len() && inner[j] != b'"' {
                                    j += if inner[j] == b'\\' { 2 } else { 1 };
                                }
                                j += 1; // past the closing quote
                            }
                            b'(' => {
                                depth += 1;
                                j += 1;
                            }
                            b')' => {
                                depth -= 1;
                                if depth == 0 {
                                    break;
                                }
                                j += 1;
                            }
                            _ => j += 1,
                        }
                    }
                    if depth != 0 {
                        let at = body_start + i;
                        return Err(Diagnostic::error(
                            Code::UnexpectedToken,
                            Span::new(at, at + 1),
                            t.line,
                            "string interpolation '?(' is not closed with ')'".to_string(),
                        ));
                    }
                    let full: &'a str = self.src;
                    let abs_start = body_start + expr_start;
                    let slice = &full[abs_start..body_start + j];
                    let e = self.parse_subexpr(slice, abs_start, t.line)?;
                    // `?(e)` stringifies via `to_string`, so an interpolant of any
                    // type with an `Ito_string` instance (base types ship one in the
                    // auto-imported `CORE`) reads as `Str`. The call
                    // inherits the interpolant's span so a resolution failure
                    // points at the interpolant, not a synthetic node.
                    let span = self.ast.expr_span(e).unwrap_or(t.span);
                    let to_string = self.intern("to_string");
                    let f = self.expr(Expr::Var {
                        module: None,
                        name: to_string,
                    });
                    let call = self.expr(Expr::App(f, e));
                    self.ast.expr_spans.insert(call, span);
                    segs.push(call);
                    i = j + 1; // past ')'
                }
                c => {
                    chunk.push(c);
                    i += 1;
                }
            }
        }
        let seg = self.str_expr(&chunk);
        segs.push(seg);

        if !interpolated {
            return Ok(segs.pop().expect("at least the whole-string chunk"));
        }
        let concat = self.intern("++");
        let mut acc = segs[0];
        for &rhs in &segs[1..] {
            acc = self.expr(Expr::BinOp {
                op: concat,
                lhs: acc,
                rhs,
            });
        }
        Ok(acc)
    }

    /// Parse a single expression from a sub-slice of the source (a string
    /// interpolant's `{...}` body), re-lexing it with absolute spans. Restores
    /// the outer token stream afterwards, even on error.
    fn parse_subexpr(&mut self, slice: &'a str, base: usize, line: Line) -> Result<Aol<Expr>> {
        let saved = std::mem::replace(&mut self.lex, Lexer::sub(slice, base, line));
        let saved_end = self.last_end;
        let out = self.parse_expr(0).and_then(|e| {
            if matches!(self.peek_kind()?, Kind::Eof) {
                Ok(e)
            } else {
                let t = self.peek()?;
                Err(self.unexpected(&t, "expected a single expression in the interpolation"))
            }
        });
        self.lex = saved;
        self.last_end = saved_end;
        out
    }
    /// Consume the next token and intern its text (the token is a checked word).
    fn bump_word(&mut self) -> Result<StrId> {
        let t = self.bump()?;
        Ok(self.intern(self.text(t)))
    }
    /// Expect a `Word` and intern it. Combines `expect!` + `intern` so the token
    /// is bound to a local first (a nested `self.intern(self.bump()?...)` would
    /// mutably borrow `self` twice in one expression).
    fn expect_word(&mut self, what: &str) -> Result<StrId> {
        let t = expect!(self, Kind::Word, what);
        Ok(self.intern(self.text(t)))
    }
    /// An effect-row label: a Capitalized `Word` (a user-declared effect like
    /// `Fail`) or an `@`-form builtin effect (`@io`). The lexeme is interned as
    /// written, so `@io` keeps its sigil ("@io"), matching the `@`-type-con
    /// convention and staying distinct from any user effect.
    fn expect_effect_label(&mut self) -> Result<StrId> {
        let t = self.peek()?;
        if matches!(t.kind, Kind::Word | Kind::At) {
            self.bump()?;
            Ok(self.intern(self.text(t)))
        } else {
            Err(self.unexpected(&t, "expected an effect name"))
        }
    }
    /// Consume a lowercase-initial type variable name and intern it.
    fn expect_tyvar(&mut self, what: &str) -> Result<StrId> {
        let t = expect!(self, Kind::Word, what);
        if !self.text(t).starts_with(|c: char| c.is_ascii_lowercase()) {
            return Err(self.unexpected(&t, "a type variable must start with a lowercase letter"));
        }
        Ok(self.intern(self.text(t)))
    }
    /// Is the next token a lowercase-initial word, i.e. a type variable?
    fn at_tyvar(&mut self) -> Result<bool> {
        let t = self.peek()?;
        Ok(matches!(t.kind, Kind::Word) && self.text(t).starts_with(|c: char| c.is_ascii_lowercase()))
    }
    /// The optional type parameters after a `@struct`/`@union` keyword
    /// and before `=`: `@struct a b = ...`. Empty when omitted (the parameters are
    /// then inferred from the free type variables in the body).
    fn parse_type_params(&mut self) -> Result<Slice<StrId>> {
        let mut params = Vec::new();
        while self.at_tyvar()? {
            params.push(self.expect_tyvar("expected a type parameter")?);
        }
        Ok(self.ast.make_slice(params))
    }

    /// If `base` is a bare, unqualified variable, its interned name.
    fn bare_var_name(&self, base: Aol<Expr>) -> Option<StrId> {
        match self.ast.exprs.lookup(base) {
            Expr::Var { module: None, name } => Some(*name),
            _ => None,
        }
    }

    fn peek(&mut self) -> Result<Token> {
        self.lex.peek(0)
    }
    fn peek_at(&mut self, n: usize) -> Result<Token> {
        self.lex.peek(n)
    }
    fn peek_kind(&mut self) -> Result<Kind> {
        Ok(self.lex.peek(0)?.kind)
    }
    fn bump(&mut self) -> Result<Token> {
        let t = self.lex.next_token()?;
        self.last_end = t.span.end;
        Ok(t)
    }
    /// Consume the next token if it matches `pred`; report whether it did.
    fn eat(&mut self, pred: impl Fn(Kind) -> bool) -> Result<bool> {
        if pred(self.peek()?.kind) {
            self.bump()?;
            Ok(true)
        } else {
            Ok(false)
        }
    }
    /// Is the next token the operator with lexeme `s`?
    fn at_op(&mut self, s: &str) -> Result<bool> {
        let t = self.peek()?;
        Ok(matches!(t.kind, Kind::Op) && self.text(t) == s)
    }
    fn unexpected(&self, t: &Token, what: &str) -> Diagnostic {
        Diagnostic::error(
            Code::UnexpectedToken,
            t.span,
            t.line,
            format!("{what}, found {}", describe(t, self.text(*t))),
        )
    }

    /// A type name must start with a capital letter; a lowercase name in type
    /// position is a type variable. `tok` is the offending name token, for the
    /// error span.
    fn require_type_capital(&self, text: &str, tok: &Token) -> Result<()> {
        if text.starts_with(|c: char| c.is_ascii_uppercase()) {
            Ok(())
        } else {
            Err(self.unexpected(
                tok,
                "a type name must start with a capital letter (a lowercase name is a type variable)",
            ))
        }
    }

    /// A value or function name must start with a lowercase letter; a capitalized
    /// name is a type or constructor. Symbolic names (operators) are exempt.
    fn require_value_lowercase(&self, text: &str, tok: &Token) -> Result<()> {
        if text.starts_with(|c: char| c.is_ascii_uppercase()) {
            Err(self.unexpected(
                tok,
                "a value or function name must start with a lowercase letter (a capitalized name is a type or constructor)",
            ))
        } else {
            Ok(())
        }
    }

    // -- program + globals --------------------------------------------------

    /// Parse a whole compilation unit.
    pub fn parse_program(&mut self) -> Result<Program> {
        let at = expect!(self, Kind::At, "expected '@mod' at the start of the file");
        if self.intrinsic_name(at) != "mod" {
            return Err(self.unexpected(&at, "expected '@mod' at the start of the file"));
        }
        let name = expect!(self, Kind::Word, "expected a module name after '@mod'");
        let module = self.intern(self.text(name));

        let mut items = Vec::new();
        while !matches!(self.peek_kind()?, Kind::Eof) {
            items.push(self.parse_global()?);
        }
        Ok(Program {
            module,
            items: self.ast.make_slice(items),
        })
    }

    fn parse_global(&mut self) -> Result<Item> {
        let dollar = expect!(
            self,
            Kind::Dollar,
            "expected a global declaration starting with '$'"
        );
        let t = self.peek()?;
        match t.kind {
            Kind::With => self.parse_import(),
            Kind::At => self.parse_directive(t, dollar.span.start),
            Kind::Word => self.parse_named_global(),
            Kind::LParen => self.parse_operator_global(),
            _ => Err(self.unexpected(&t, "expected a name or directive after '$'")),
        }
    }

    /// A `$ @...` directive: visibility, compile-time run (`@e`), or an operator
    /// definition.
    fn parse_directive(&mut self, at: Token, start: usize) -> Result<Item> {
        match self.intrinsic_name(at) {
            "private" => {
                self.bump()?;
                Ok(Item::Private)
            }
            "public" => Err(self.unexpected(
                &at,
                "there is no '@public': symbols are public by default. Use '$ @private' \
                 to hide the declarations below it",
            )),
            // `$ @e X` embeds a PURE compile-time result; `$ @run X` discharges
            // `<@meta>` (runs a meta computation for its effect / to inject code).
            name @ ("e" | "run") => {
                let meta = name == "run";
                self.bump()?;
                let e = self.parse_expr(0)?;
                Ok(Item::Run(e, Span::new(start, self.last_end), meta))
            }
            // The two `@`-names bound to a VALUE: `@main`, the program entry, and
            // `@build`, the compile-time entry, whose `@code` result the driver adds
            // to this module. Both are ordinary definitions with a mandatory
            // signature; the compiler knows nothing about them but their names.
            which @ ("main" | "build") => {
                let at_tok = self.bump()?; // '@main' / '@build'
                let name = self.intern(self.text(at_tok));
                let want_sig = if which == "main" {
                    "expected ':' and a type for '@main'"
                } else {
                    "expected ':' and a type for '@build'"
                };
                expect!(self, Kind::Colon, want_sig);
                let (sig, ctx) = self.parse_signature()?;
                expect!(self, Kind::Eq, "expected '=' after the type signature");
                let body = self.parse_expr(0)?;
                Ok(Item::Def {
                    name,
                    sig: Some(sig),
                    ctx,
                    body,
                })
            }
            // A blessed interface TYPE (`$ @IRange : @struct b t = range: b -> b -> t,`).
            // The compiler resolves a value of it at the matching desugar site and
            // projects its single field, so the name is fixed and only CORE declares
            // it; an implementation is an ordinary value (`$ r : @IRange @int (@vec
            // @int) = .{ .range = ... }`).
            name if table::is_blessed_interface(&format!("@{name}")) => {
                let at_tok = self.bump()?; // the '@I...' token
                let iname = self.intern(self.text(at_tok));
                expect!(self, Kind::Colon, "expected ':' and '@struct' for the interface type");
                if !self.at_intrinsic("struct")? {
                    return Err(self.unexpected(
                        &at_tok,
                        "a blessed interface is declared as a one-field '@struct'",
                    ));
                }
                self.bump()?; // '@struct'
                let params = self.parse_type_params()?;
                expect!(self, Kind::Eq, "expected '=' after '@struct'");
                let (includes, fields) = self.parse_struct_body()?;
                Ok(Item::Struct {
                    name: iname,
                    params,
                    includes,
                    fields,
                    abi: None,
                    c_union: false,
                })
            }
            other => Err(self.unexpected(
                &at,
                &format!(
                    "'@{other}' is a compiler intrinsic and is not extensible in user code; \
                     only '@main' and the blessed interface types may be declared"
                ),
            )),
        }
    }

    /// `$ (op) : sig = body`: a definition bound under the symbolic operator name
    /// `op`. It becomes a plain [`Item::Def`], so it flows through the same
    /// collection, type-checking, and lowering as a `$ name` def and joins `op`'s
    /// name (a use like `a op b` then references it).
    fn parse_operator_global(&mut self) -> Result<Item> {
        self.bump()?; // '('
        let op_tok = expect!(self, Kind::Op, "expected an operator inside '( )'");
        let op = self.intern(self.text(op_tok));
        expect!(self, Kind::RParen, "expected ')' after the operator");
        expect!(self, Kind::Colon, "expected ':' and a type for the operator");
        let (sig, ctx) = self.parse_signature()?;
        expect!(self, Kind::Eq, "expected '=' after the type signature");
        let body = self.parse_expr(0)?;
        Ok(Item::Def {
            name: op,
            sig: Some(sig),
            ctx,
            body,
        })
    }

    /// `$ with module [= rename]`
    fn parse_import(&mut self) -> Result<Item> {
        self.bump()?; // 'with'
        let module = self.parse_dotted_name()?;
        let rename = if self.eat(|k| matches!(k, Kind::Eq))? {
            Some(self.parse_dotted_name()?)
        } else {
            None
        };
        Ok(Item::Import { module, rename })
    }

    fn parse_dotted_name(&mut self) -> Result<Slice<StrId>> {
        let first = expect!(self, Kind::Word, "expected a module name");
        let mut names = vec![self.intern(self.text(first))];
        while matches!(self.peek_kind()?, Kind::Dot) {
            self.bump()?;
            let part = expect!(self, Kind::Word, "expected a name after '.'");
            names.push(self.intern(self.text(part)));
        }
        Ok(self.ast.make_slice(names))
    }
